# workstreams

./: .env.local.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
.github/workflows/: ci-release.yml  ci.yml  release.yml
.husky/: pre-commit
docs/: contributor-guide.md  features-detailed.md  system-diagram.md  tutorial.md
docs/adrs/: 001-workstream-tiling-architecture.md  002-discipline-enforcement.md  003-cdp-feature-validation.md  004-playwright-e2e.md  004-repo-explorer-tile.md  005-repo-create-vs-import.md  006-editable-text-files.md  007-diff-grok-integration.md  008-mcp-bridge-for-skills.md  009-inline-file-comments.md  010-feature-flags.md  011-nonblocking-worktree-ops.md  012-repo-content-search.md
docs/bench/: search-perf-2026-05-19-after.json  search-perf-2026-05-19-before.json  search-perf-2026-05-19.md
docs/tutorial/: tutorial.md
e2e/features/: _generic.mjs  audio-playback.mjs  bugfix-validation.mjs  change-worktree.mjs  diff-grok.mjs  diff-view-unify.mjs  file-edit.mjs  focus-scroll-repro.mjs  inline-comments.mjs  markdown-mermaid.mjs  md-preview-shortcut.mjs  osc52-validation.mjs  plan-tile.mjs  repo-create-flow.mjs  repo-explorer-fixes.mjs  repo-explorer-search-perf.mjs  session-buffer-refresh.mjs  session-focus-scroll.mjs  session-tile-narrow-cols-on-ws-switch.mjs  startup-no-autoselect.mjs  syntax-highlight.mjs  terminal-scroll-speed.mjs  tile-view-state.mjs  tz-improvements.mjs  ws-status-cleanup.mjs  wsflow-form-restructure.mjs
e2e/fixtures/: gen-tiny-wav.mjs
e2e/tests/: audio-player.spec.ts  repo-content-search.spec.ts  session-correlation.spec.ts  ws-create.spec.ts
screenshots/: fullscreen-yellow-border-2026-05-12T21-30-34-604Z.meta.json  test-1-2026-05-12T21-20-25-781Z.meta.json
scripts/: cdp-feature.mjs  cdp-utils.mjs  cdp-validate.mjs  check-test-files.mjs  compute-next-version.mjs  copy-shim.mjs  debug-open-button.cjs  debug-projects.cjs  dev-kill.mjs  dev-seed.mjs  diff-grok-smoke.mjs  discipline-audit.mjs  explore-session-db.py  install-hooks.mjs  perf-profile.mjs  perf-pty-bench.mjs  repo-explorer-cli.mjs  test-open-button.cjs
scripts/__tests__/: compute-next-version.test.mjs  dev-seed.test.mjs  repo-explorer-cli.test.mjs
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/git-no-verify/: Cargo.toml  README.md
src-tauri/git-no-verify/src/: filter.rs  main.rs
src-tauri/git-no-verify/tests/: filter_tests.rs  integration_tests.rs  path_scrub_tests.rs  perf_tests.rs
src-tauri/src/: db.rs  diff_review.rs  file_comments.rs  file_io.rs  fs_watcher.rs  lib.rs  main.rs  pty.rs  repo_create.rs  session_poller.rs
src/__tests__/: App.test.tsx
src/backend/: context.tsx  memory-backend.ts  (+2 more)
(+183 files in other folders)
