[package]
name = "workstreams"
version = "0.2.0"
description = "Project-aware workstream manager with tiling compositor for Copilot CLI"
authors = ["alejandroe"]
edition = "2021"

[lib]
name = "workstreams_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
notify = "6"
notify-debouncer-mini = "0.4"
sha2 = "0.10"
dunce = "1"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
